More IE7 fixes: Fixed RSS logo place and removed extra space.

--- a/www/css/ie7_fix.css
+++ b/www/css/ie7_fix.css
@@ -6,3 +6,4 @@ div.right_side{ width: 200px !important; }
 div.top_row_center_right_login_links, div.user_content_spacer, div.user_content_spacer img, div.user_content_row, div.linking_content, #form_content_add_container, .form_element, .form_helptext_line, .form_addcontent_row , #content_production_container_left, div.top_row_center_right_login_links{ width: 490px !important;}
 .add_content_button {cursor: pointer;}
 #add_content_menu { margin-left: -132px; margin-top: 27px;}
+.rsslogo {margin-top: -10px;}
